--- a/index.html
+++ b/index.html
@@ -64,12 +64,14 @@
         <div class="muted">Vista previa del widget</div>
         <div class="widget" id="widget">
           <span class="badge">MQL5 Widget</span>
-          <div id="mql5-slot" style="width:220px;text-align:center;line-height:26px;">
-            <div style="padding:14px;text-align:center">
-              <div style="font-weight:700;margin-bottom:8px">✅ GitHub Pages está funcionando</div>
-              <div class="note">Ahora pega aquí tu <strong>código de MQL5 (iframe)</strong>.<br>Ve a MQL5 → Señales → Widget → “Copiar el código del widget”.</div>
+            <div style="width:220;text-align:center;line-height:26px;">
+              <iframe frameborder="0" width="100%" height="140" src="https://www.mql5.com/es/signals/widget/signal/76y7?t=dark?fw=html"></iframe>
+              <div class="sw-copyright">
+                <a href="https://www.mql5.com/?utm_source=signals.widget&utm_medium=link&utm_term=signals&utm_content=visit.mql5.signals&utm_campaign=202.signals.widget" rel="noopener nofollow" target="_blank">
+                  MQL5 Algo Trading Community
+                </a>
+              </div>
             </div>
-          </div>
         </div>
         <div class="note center">Si el widget queda estrecho, cambia <code>width</code> a <code>100%</code> y ajusta <code>height</code> del iframe.</div>
       </div>
