--- a/index.html
+++ b/index.html
@@ -4,26 +4,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DGO Trading — Señal en vivo</title>
-  <meta name="description" content="Sigue la señal DGO Trading en tiempo real.">
-  <meta property="og:title" content="DGO Trading — Señal en vivo">
-  <meta property="og:description" content="Sigue la señal DGO Trading en tiempo real.">
-  <meta property="og:type" content="website">
   <style>
     :root{
-      --bg:#0b0f1a;
+      --bg:#40E0D0; /* Azul turquesa */
       --card:#121828;
       --text:#e8eefc;
       --muted:#9fb0d9;
       --accent:#38bdf8;
     }
     *{box-sizing:border-box}
-    html,body{height:100%}
     body{
       margin:0;
       font-family:ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-      background:radial-gradient(1200px 600px at 10% -10%, #1a2240 0%, rgba(17,24,39,0) 60%) var(--bg);
+      background: var(--bg); /* Fondo turquesa */
       color:var(--text);
-      line-height:1.55;
       display:flex;
       align-items:center;
       justify-content:center;
@@ -31,23 +25,16 @@
     }
     .wrap{width:100%; max-width:760px}
     .card{
-      background:linear-gradient(180deg, #0e1424, #0a0f1d);
-      border:1px solid #1f2a44;
+      background:#0a0f1d;
       border-radius:22px;
-      box-shadow:0 10px 30px #00000060, inset 0 0 0 1px #ffffff05;
       padding:22px;
     }
-    header{display:flex; gap:16px; align-items:center; justify-content:space-between; margin-bottom:14px; flex-wrap:wrap}
-    h1{font-size:clamp(1.35rem, 1rem + 2vw, 2rem); margin:0; letter-spacing:.2px}
+    h1{margin:0; font-size:2rem}
     .muted{color:var(--muted); font-size:.95rem}
-    .cta{display:inline-flex; align-items:center; gap:8px; background:linear-gradient(180deg, #1f9be6, #0ea5e9); color:white; padding:10px 16px; border-radius:14px; border:0; cursor:pointer; font-weight:700; text-decoration:none; box-shadow:0 6px 20px #0ea5e977}
-    .panel{background:var(--card); border:1px solid #212e4b; border-radius:18px; padding:14px; margin-top:14px}
-    .widget{width:100%; min-height:170px; display:grid; place-items:center; background:repeating-linear-gradient(45deg, #0e1527, #0e1527 12px, #0f1730 12px, #0f1730 24px); border-radius:14px; border:1px dashed #2a3a62; position:relative; overflow:hidden}
-    .badge{position:absolute; top:10px; right:10px; font-size:.75rem; color:#8fb3ff; background:#0b1326; border:1px solid #22407a; border-radius:999px; padding:4px 10px}
+    .panel{background:var(--card); border-radius:18px; padding:14px; margin-top:14px}
+    .widget{width:100%; display:grid; place-items:center; background:#0e1527; border-radius:14px; padding:10px}
     iframe{width:100%; border:0}
     footer{margin-top:16px; text-align:center; color:var(--muted); font-size:.85rem}
-    .note{font-size:.9rem; color:var(--muted); margin-top:10px}
-    .center{text-align:center}
   </style>
 </head>
 <body>
@@ -61,19 +48,16 @@
       </header>
 
       <div class="panel">
-        <div class="muted">Vista previa del widget</div>
-        <div class="widget" id="widget">
-          <span class="badge">MQL5 Widget</span>
-            <div style="width:220;text-align:center;line-height:26px;">
-              <iframe frameborder="0" width="100%" height="140" src="https://www.mql5.com/es/signals/widget/signal/76y7?t=dark?fw=html"></iframe>
-              <div class="sw-copyright">
-                <a href="https://www.mql5.com/?utm_source=signals.widget&utm_medium=link&utm_term=signals&utm_content=visit.mql5.signals&utm_campaign=202.signals.widget" rel="noopener nofollow" target="_blank">
-                  MQL5 Algo Trading Community
-                </a>
-              </div>
+        <div class="widget">
+          <div style="width:220;text-align:center;line-height:26px;">
+            <iframe frameborder="0" width="100%" height="140"
+              src="https://www.mql5.com/es/signals/widget/signal/76y7?t=dark?fw=html"></iframe>
+            <div class="sw-copyright">
+              <a href="https://www.mql5.com/?utm_source=signals.widget&utm_medium=link&utm_term=signals&utm_content=visit.mql5.signals&utm_campaign=202.signals.widget"
+                 rel="noopener nofollow" target="_blank">MQL5 Algo Trading Community</a>
             </div>
+          </div>
         </div>
-        <div class="note center">Si el widget queda estrecho, cambia <code>width</code> a <code>100%</code> y ajusta <code>height</code> del iframe.</div>
       </div>
 
       <footer>
