--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="wrap">
     <div class="card">
       <header>
-        <img src="Logo.png" alt="Logo DGO Trading" style="height:56px; border-radius:12px">
+        <img src="logo.png" alt="Logo DGO Trading" style="height:56px; border-radius:12px">
         <div>
           <h1>DGO Trading</h1>
           <div class="muted">Señal en vivo y enlaces útiles</div>
