--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="panel">
         <div class="widget" id="widget">
           <span class="badge">MQL5 Widget</span>
-          <div style="width:220;text-align:center;line-height:26px;">
+          <div style="width:100%;text-align:center;line-height:26px;">
             <iframe frameborder="0" width="100%" height="140" src="https://www.mql5.com/es/signals/widget/signal/76y7?t=dark?fw=html"></iframe>
             <div class="sw-copyright">
               <a href="https://www.mql5.com/?utm_source=signals.widget&utm_medium=link&utm_term=signals&utm_content=visit.mql5.signals&utm_campaign=202.signals.widget" rel="noopener nofollow" target="_blank">
