--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DGO Trading — Señal en vivo</title>
   <meta name="description" content="Sigue la señal DGO Trading en tiempo real.">
-  <meta property="og:title" content="DGO Trading — Señal en vivo">
+  <meta property="og:title" content="Trading — Señal en vivo">
   <meta property="og:description" content="Sigue la señal DGO Trading en tiempo real.">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#121828">
