--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     /* Contenedor de página a pantalla completa */
     .wrap{width:100%}
     .card{
-      min-height:100vh;           /* ocupa alto completo */
+      min-height:100vh;
       width:100%;
       margin:0;
       padding:28px clamp(16px, 4vw, 40px);
@@ -48,7 +48,7 @@
         radial-gradient(1000px 600px at 10% -10%, #162347 0%, transparent 60%),
         linear-gradient(180deg, var(--card) 0%, var(--card2) 100%);
       border:1px solid var(--stroke);
-      border-radius:0;            /* sin esquinas para cubrir todo */
+      border-radius:0;
       box-shadow: 0 20px 50px rgba(0,0,0,.35), inset 0 0 0 1px rgba(255,255,255,.03);
       display:flex;
       flex-direction:column;
@@ -65,13 +65,6 @@
     .brand img{height:80px; width:auto; border-radius:12px; box-shadow:0 4px 18px rgba(0,0,0,.35)}
     h1{margin:0; font-size:clamp(1.6rem, 1.1rem + 2vw, 2.25rem); letter-spacing:.2px}
     .muted{color:var(--muted); font-size:.95rem}
-
-    .ad-wrap{
-      display:flex; justify-content:center;
-      padding:6px 0 2px;
-      overflow-x:auto; /* evita que rompa el layout en móviles */
-    }
-    .ad-inner{min-width:728px} /* tamaño real del banner; con overflow-x el usuario puede desplazarlo en pantallas pequeñas */
 
     .panel{
       background:linear-gradient(180deg, #111a31, #0c1427);
@@ -102,7 +95,7 @@
     a{color:var(--accent); text-decoration:none}
     a:hover{filter:brightness(1.1); text-decoration:underline}
 
-    /* Botones de llamada a la acción */
+    /* CTA */
     .cta-group{display:flex; gap:12px; flex-wrap:wrap; margin-top:10px}
     .cta{
       display:inline-flex; align-items:center; justify-content:center;
@@ -117,9 +110,22 @@
       background:linear-gradient(180deg,#34d399,#10b981);
       box-shadow:0 8px 20px rgba(16,185,129,.35);
     }
+    /* Full width en móvil */
+    @media (max-width:640px){
+      .cta{flex:1 0 100%}
+      .cta-group{gap:10px}
+    }
+
+    /* Anuncio */
+    .ad-wrap{
+      display:flex; justify-content:center;
+      padding:10px 0 2px;
+      overflow-x:auto; /* evita que rompa el layout en móviles */
+    }
+    .ad-inner{min-width:728px}
 
     footer{
-      margin-top:auto;            /* empuja al final si hay poco contenido */
+      margin-top:auto;
       text-align:center; color:var(--muted); font-size:.88rem;
       padding-top:8px; border-top:1px solid rgba(255,255,255,.06);
     }
@@ -160,7 +166,22 @@
         </div>
       </section>
 
-      <!-- Anuncio (tal cual nos diste) -->
+      <!-- 1) WIDGET (primero) -->
+      <div class="panel">
+        <div class="widget" id="widget">
+          <span class="badge">MQL5 Widget</span>
+          <div style="width:100%;text-align:center;line-height:26px;">
+            <iframe frameborder="0" width="100%" height="140" loading="lazy"
+              src="https://www.mql5.com/es/signals/widget/signal/76y7?t=dark?fw=html"></iframe>
+            <div class="sw-copyright">
+              <a href="https://www.mql5.com/?utm_source=signals.widget&utm_medium=link&utm_term=signals&utm_content=visit.mql5.signals&utm_campaign=202.signals.widget"
+                 rel="noopener nofollow" target="_blank">MQL5 Algo Trading Community</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- 2) ANUNCIO (después del widget) -->
       <div class="ad-wrap">
         <div class="ad-inner">
           <ins class="dcmads" style="display:inline-block;width:728px;height:90px"
@@ -177,21 +198,6 @@
             <script src="https://www.googletagservices.com/dcm/dcmads.js"></script>
           </ins>
           <img src="https://trk.pepperstonepartners.com/aff_i?offer_id=382&aff_id=40752&file_id=5423" width="0" height="0" style="position:absolute;visibility:hidden;" border="0" alt="">
-        </div>
-      </div>
-
-      <!-- Widget -->
-      <div class="panel">
-        <div class="widget" id="widget">
-          <span class="badge">MQL5 Widget</span>
-          <div style="width:100%;text-align:center;line-height:26px;">
-            <iframe frameborder="0" width="100%" height="140" loading="lazy"
-              src="https://www.mql5.com/es/signals/widget/signal/76y7?t=dark?fw=html"></iframe>
-            <div class="swopyright">
-              <a href="https://www.mql5.com/?utm_source=signals.widget&utm_medium=link&utm_term=signals&utm_content=visit.mql5.signals&utm_campaign=202.signals.widget"
-                 rel="noopener nofollow" target="_blank">MQL5 Algo Trading Community</a>
-            </div>
-          </div>
         </div>
       </div>
 
