--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <img src="logo.png" alt="Logo DGO Trading">
           <div>
             <h1>DGO Trading</h1>
-            <div class="muted">Señal en vivo y enlaces útiles</div>
+            <div class="muted">Certeza en el proceso</div>
           </div>
         </div>
       </header>
