--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#121828">
 
-  <!-- Tipografía profesional -->
+  <!-- Tipografía monoespaciada (look de máquina) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
     :root{
@@ -31,7 +31,8 @@
     html,body{height:100%}
     body{
       margin:0;
-      font-family:Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+      font-family:"JetBrains Mono", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      letter-spacing:.1px;
       background:var(--bg);
       color:var(--text);
       line-height:1.6;
