--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       --font-grotesk: "Space Grotesk", system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       --font-mono: "JetBrains Mono", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
-      /* Selección actual (puedes cambiarla por defecto a var(--font-mono) o var(--font-grotesk)) */
+      /* Selección actual por defecto */
       --font-current: var(--font-sans);
     }
 
@@ -137,10 +137,11 @@
       padding-top:8px; border-top:1px solid rgba(255,255,255,.06);
     }
 
-    /* Conmutador de tipografía (flotante, discreto) */
+    /* Conmutador de tipografía (oculto por defecto) */
     .font-switcher{
       position:fixed; right:14px; bottom:14px;
-      display:flex; align-items:center; gap:8px;
+      display:none; /* OCULTO */
+      align-items:center; gap:8px;
       background:rgba(13,20,38,.85);
       border:1px solid var(--stroke);
       color:var(--muted);
@@ -149,6 +150,8 @@
       font-size:.9rem;
       z-index:50;
     }
+    .font-switcher.show{ display:flex; } /* visible solo si hay ?font */
+
     .font-switcher select{
       background:#0b1326; color:var(--text);
       border:1px solid #1e2a49; border-radius:8px;
@@ -198,7 +201,7 @@
           <div style="width:100%;text-align:center;line-height:26px;">
             <iframe frameborder="0" width="100%" height="140" loading="lazy"
               src="https://www.mql5.com/es/signals/widget/signal/76y7?t=dark?fw=html"></iframe>
-            <div class="sw-copyright">
+            <div class="swopyright">
               <a href="https://www.mql5.com/?utm_source=signals.widget&utm_medium=link&utm_term=signals&utm_content=visit.mql5.signals&utm_campaign=202.signals.widget"
                  rel="noopener nofollow" target="_blank">MQL5 Algo Trading Community</a>
             </div>
@@ -234,8 +237,8 @@
     </div>
   </div>
 
-  <!-- Conmutador de tipografía -->
-  <div class="font-switcher" title="Cambiar tipografía">
+  <!-- Conmutador de tipografía (oculto) -->
+  <div class="font-switcher" id="fontSwitcher" title="Cambiar tipografía">
     <span style="font-size:.85rem">Tipografía:</span>
     <select id="fontSelect" aria-label="Seleccionar tipografía">
       <option value="sans">Inter</option>
@@ -248,21 +251,33 @@
     // Año en footer
     document.getElementById('yr').textContent = new Date().getFullYear();
 
-    // Conmutador de tipografía con persistencia
+    // Conmutador de tipografía con persistencia (UI visible solo si hay ?font en la URL)
     (function(){
+      const root = document.documentElement;
       const stacks = {
-        sans: getComputedStyle(document.documentElement).getPropertyValue('--font-sans').trim(),
-        grotesk: getComputedStyle(document.documentElement).getPropertyValue('--font-grotesk').trim(),
-        mono: getComputedStyle(document.documentElement).getPropertyValue('--font-mono').trim(),
+        sans: getComputedStyle(root).getPropertyValue('--font-sans').trim(),
+        grotesk: getComputedStyle(root).getPropertyValue('--font-grotesk').trim(),
+        mono: getComputedStyle(root).getPropertyValue('--font-mono').trim(),
       };
+
       const select = document.getElementById('fontSelect');
+      const switcher = document.getElementById('fontSwitcher');
+
+      // Aplicar lo guardado
       const saved = localStorage.getItem('fontStack') || 'sans';
       select.value = saved;
-      document.documentElement.style.setProperty('--font-current', stacks[saved]);
+      root.style.setProperty('--font-current', stacks[saved]);
 
+      // Mostrar el switcher SOLO si la URL incluye ?font
+      const params = new URLSearchParams(location.search);
+      if (params.has('font')) {
+        switcher.classList.add('show');
+      }
+
+      // Cambios
       select.addEventListener('change', function(){
         const key = this.value;
-        document.documentElement.style.setProperty('--font-current', stacks[key]);
+        root.style.setProperty('--font-current', stacks[key]);
         localStorage.setItem('fontStack', key);
       });
     })();
