--- a/index.html
+++ b/index.html
@@ -130,6 +130,50 @@
       padding-top:8px; border-top:1px solid rgba(255,255,255,.06);
     }
 
+    /* ====== MENÚ LATERAL DERECHA (Servicios) ====== */
+    .side-menu{
+      position:fixed;
+      right:18px; top:28px;
+      width:240px;
+      background:linear-gradient(180deg, #111a31, #0c1427);
+      border:1px solid var(--stroke);
+      border-radius:14px;
+      padding:14px;
+      box-shadow: 0 12px 30px rgba(0,0,0,.35), 0 0 0 1px rgba(255,255,255,.03) inset;
+      z-index:40;
+    }
+    .side-menu h3{
+      margin:0 0 8px; font-size:1rem; letter-spacing:.2px; color:#cfe0ff;
+    }
+    .svc-list{list-style:none; margin:0; padding:0; display:grid; gap:8px}
+    .svc-list a{
+      display:flex; align-items:center; justify-content:space-between;
+      padding:10px 12px; border-radius:10px;
+      background:#0e162c; border:1px solid #1d2947;
+      color:var(--text); text-decoration:none; font-weight:600;
+      transition: transform .06s ease, box-shadow .2s ease, background .2s ease, border-color .2s ease;
+    }
+    .svc-list a span{opacity:.8; font-weight:500; font-size:.9rem}
+    .svc-list a::after{
+      content:"›"; opacity:.8; transform: translateX(0); transition: transform .15s ease, opacity .2s ease;
+    }
+    .svc-list a:hover{
+      background:#0f1b36; border-color:#28406e; box-shadow:0 6px 20px rgba(56,189,248,.18);
+    }
+    .svc-list a:hover::after{ transform: translateX(2px); opacity:1 }
+
+    /* Reservar espacio a la derecha en desktop para que no tape el contenido */
+    @media (min-width:1024px){
+      .card{ padding-right: calc(clamp(16px, 4vw, 40px) + 260px); }
+    }
+
+    /* En pantallas pequeñas, el menú se integra al flujo (debajo del header) */
+    @media (max-width:1023px){
+      .side-menu{
+        position:static; width:100%; margin:0 0 10px 0;
+      }
+    }
+
     /* Pequeños refinamientos responsivos */
     @media (max-width: 820px){
       .brand img{height:64px}
@@ -150,6 +194,17 @@
           </div>
         </div>
       </header>
+
+      <!-- ====== MENÚ LATERAL DERECHA (Servicios) ====== -->
+      <nav class="side-menu" aria-labelledby="svc-title">
+        <h3 id="svc-title">Servicios</h3>
+        <ul class="svc-list">
+          <li><a href="servicios/copiador-de-senales.html" title="Copiador de Señales">Copiador de Señales <span>setup & soporte</span></a></li>
+          <li><a href="servicios/codifica-tu-estrategia.html" title="Codifica tu estrategia">Codifica tu estrategia <span>de idea a código</span></a></li>
+          <li><a href="servicios/academia.html" title="Academia">Academia <span>formación aplicada</span></a></li>
+          <li><a href="servicios/fondo-de-inversion.html" title="Fondo de Inversión">Fondo de Inversión <span>información</span></a></li>
+        </ul>
+      </nav>
 
       <!-- Descripción + CTA -->
       <section class="panel" aria-labelledby="about-title">
@@ -173,7 +228,7 @@
           <div style="width:100%;text-align:center;line-height:26px;">
             <iframe frameborder="0" width="100%" height="140" loading="lazy"
               src="https://www.mql5.com/es/signals/widget/signal/76y7?t=dark?fw=html"></iframe>
-            <div class="sw-copyright">
+            <div class="swopyright">
               <a href="https://www.mql5.com/?utm_source=signals.widget&utm_medium=link&utm_term=signals&utm_content=visit.mql5.signals&utm_campaign=202.signals.widget"
                  rel="noopener nofollow" target="_blank">MQL5 Algo Trading Community</a>
             </div>
