--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
       <!-- ====== MENÚ LATERAL DERECHA (Servicios) ====== -->
       <nav class="side-menu" aria-labelledby="svc-title">
-        <h3 id="svc-title">Servicios</h3>
+        <h3 id="svc-title">SERVICIOS</h3>
         <ul class="svc-list">
           <li><a href="servicios/copiador-de-senales.html" title="Copiador de Señales">Copiador de Señales</a></li>
           <li><a href="servicios/codifica-tu-estrategia.html" title="Codifica tu estrategia">Codifica tu estrategia</a></li>
