--- a/index.html
+++ b/index.html
@@ -179,7 +179,10 @@
     }
     .side-cta .cta{ width:100%; justify-content:center }
     .side-cta .side-note{
-      text-align:center; margin:0 0 6px; color:var(--muted); font-size:.92rem;
+      text-align:left;           /* antes: center */
+      margin:0 0 6px;
+      color:var(--muted);
+      font-size:.92rem;
     }
 
     /* Reservar espacio a la derecha en desktop para que no tape el contenido */
