--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <style>
     :root{
-      --bg:#40E0D0;       /* Turquesa de fondo */
+      --card:#0d1426;       /* Turquesa de fondo */
       --card:#0d1426;     /* Azul oscuro base del panel */
       --card2:#0a101f;    /* Azul más profundo (degradado) */
       --stroke:#1e2a49;   /* Borde sutil */
