--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <style>
     :root{
-      --card:#0d1426;       /* Turquesa de fondo */
+      --card:#0d1426;      
       --card:#0d1426;     /* Azul oscuro base del panel */
       --card2:#0a101f;    /* Azul más profundo (degradado) */
       --stroke:#1e2a49;   /* Borde sutil */
@@ -223,7 +223,7 @@
       <nav class="side-menu" aria-labelledby="svc-title">
         <h3 id="svc-title">SERVICIOS</h3>
         <ul class="svc-list">
-          <li><a href="servicios/copiador-de-senales.html" title="Copiador de Señales">Copiador de Señales</a></li>
+          <li><a href="servicios/copiador-de-senales.html" title="Software de Copiado">Copiador de Señales</a></li>
           <li><a href="servicios/codifica-tu-estrategia.html" title="Codifica tu estrategia">Codifica tu estrategia</a></li>
           <li><a href="servicios/academia.html" title="Academia">Academia</a></li>
           <li><a href="servicios/fondo-de-inversion.html" title="Fondo de Inversión">Fondo de Inversión</a></li>
