--- a/servicios/copiador-de-senales.html
+++ b/servicios/copiador-de-senales.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DGO Trading — Copiador de Señales</title>
-  <meta name="description" content="Copiador de señales de DGO Trading. Replica operaciones con control y consistencia.">
+  <title>DGO Trading — Software de Copiado</title>
+  <meta name="description" content="Replicador DGO Trading. Replica operaciones con control y consistencia.">
   <meta property="og:title" content="DGO Trading — Copiador de Señales">
-  <meta property="og:description" content="Replica nuestras operaciones con un copiador de señales robusto y sencillo de usar.">
+  <meta property="og:description" content="Replica nuestras operaciones con un software robusto y sencillo de usar.">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#121828">
 
@@ -135,17 +135,17 @@
           <div>
             <h2 style="margin-top:0">Descripción</h2>
             <p>
-              Nuestro copiador permite seguir estrategias seleccionadas y replicar operaciones con reglas de gestión claras.
-              Está pensado para minimizar fricciones operativas y mantener la trazabilidad del proceso.
+              Opera todo tu portafolio desde un solo origen, con consistencia y control, para escalar resultados sin multiplicar trabajo.
             </p>
 
             <h3>Características clave</h3>
             <ul class="list">
-              <li>Configuración guiada y uso simple.</li>
-              <li>Parámetros de riesgo ajustables por cuenta.</li>
-              <li>Registros y métricas para seguimiento.</li>
-              <li>Soporte y acompañamiento durante la puesta en marcha.</li>
+              <li>Stop Loss y Take Profit configurables; <em>trailing stop</em> y cierres parciales disponibles.</li>
+              <li>Riesgo configurable por cuenta.</li>
+              <li>Soporte y acompañamiento en la puesta en marcha.</li>
+              <li>Garantía de funcionamiento.</li>
             </ul>
+
 
             <div style="display:flex; gap:12px; margin-top:12px; flex-wrap:wrap">
               <a class="btn" href="https://t.me/diegotrader_6" target="_blank" rel="noopener">Soporte por Telegram</a>
