--- a/servicios/copiador-de-senales.html
+++ b/servicios/copiador-de-senales.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DGO Trading — Software de Copiado</title>
   <meta name="description" content="Replicador DGO Trading. Replica operaciones con control y consistencia.">
-  <meta property="og:title" content="DGO Trading — Copiador de Señales">
-  <meta property="og:description" content="Replica nuestras operaciones con un software robusto y sencillo de usar.">
+  <meta property="og:title" content="DGO Trading — Software de Copiado">
+  <meta property="og:description" content="Replica operaciones con un software robusto y sencillo de usar.">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#121828">
 
@@ -138,9 +138,9 @@
               Opera todo tu portafolio desde un solo origen, con consistencia y control, para escalar resultados sin multiplicar trabajo.
             </p>
 
-            <h3>Características clave</h3>
+            <h3>Características</h3>
             <ul class="list">
-              <li>Stop Loss y Take Profit configurables; <em>trailing stop</em> y cierres parciales disponibles.</li>
+              <li>Stop Loss y Take Profit configurables, trailing stop y cierres parciales disponibles.</li>
               <li>Riesgo configurable por cuenta.</li>
               <li>Soporte y acompañamiento en la puesta en marcha.</li>
               <li>Garantía de funcionamiento.</li>
