--- a/servicios/copiador-de-senales.html
+++ b/servicios/copiador-de-senales.html
@@ -120,7 +120,7 @@
           <a href="../index.html" class="btn ghost" aria-label="Volver al inicio">← Volver</a>
           <img src="../logo.png" alt="Logo DGO Trading">
           <div>
-            <h1>Copiador de Señales</h1>
+            <h1>Software de Copiado</h1>
             <div class="muted">Replica operaciones de forma consistente y controlada</div>
           </div>
         </div>
@@ -141,7 +141,7 @@
             <h3>Características</h3>
             <ul class="list">
               <li>Stop Loss y Take Profit configurables, trailing stop y cierres parciales disponibles.</li>
-              <li>Riesgo configurable por cuenta.</li>
+              <li>Riesgo ajustable por cuenta.</li>
               <li>Soporte y acompañamiento en la puesta en marcha.</li>
               <li>Garantía de funcionamiento.</li>
             </ul>
@@ -161,7 +161,7 @@
 
         <h3 style="margin:12px 0 6px">USDT (TRC20)</h3>
         <div class="wallet">
-          <code id="wallet">TU_WALLET_AQUI</code>
+          <code id="wallet">TSJsvBCG9Sw3TuQjYbQmNvT22tEbPPxDNk</code>
           <button class="btn" onclick="copyWallet()">Copiar</button>
         </div>
       </section>
